--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
     "jest": "^26.4.2",
     "lerna": "^3.22.1",
     "lint-staged": "^10.4.0",
@@ -36,6 +37,7 @@
     "typescript": "^4.0.3"
   },
   "pre-commit": [
+    "pretty-quick",
     "lint-staged",
     "test"
   ],
