--- a/packages/game-state/package.json
+++ b/packages/game-state/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mastermind/game-state",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "jest"
   },
