--- a/packages/web-vue/package.json
+++ b/packages/web-vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-vue",
+  "name": "@mastermind/web-vue",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "generate": "nuxt-ts generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint"
@@ -20,9 +20,12 @@
     }
   },
   "dependencies": {
+    "@mastermind/game-state": "^1.0.0",
     "@nuxt/typescript-runtime": "^2.0.0",
+    "@vue/composition-api": "^1.0.0-beta.15",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "nuxt": "^2.14.5",
+    "vue-class-component": "^7.2.6"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.5",
@@ -30,6 +33,8 @@
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-config-typescript": "^3.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/vue": "^5.1.0",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
@@ -43,6 +48,7 @@
     "lint-staged": "^10.3.0",
     "prettier": "^2.1.1",
     "ts-jest": "^26.3.0",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "vue-property-decorator": "^9.0.2"
   }
 }
