--- a/packages/web-vue/tsconfig.json
+++ b/packages/web-vue/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2018",
     "module": "ESNext",
@@ -25,6 +26,7 @@
     },
     "types": [
       "@types/node",
+      "@types/jest",
       "@nuxt/types"
     ]
   },
